# biokb_wcvp

./: .env_template  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  docker-compose.db_neo.yml  docker-compose.mysql_neo4j_pma.yml  docker-compose.yml  mkdocs copy.yml  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml
docs/: api.md  cli.md  data_model.md  how_to_run_neo4j.md  index.md  installation.md  query_examples.ipynb  run_the_pipeline.md
mkdocs/docs/: Dataset_Description.md  installation.md  literature.md  report_draft.md  usage.md
mkdocs/report/: final_report.md
notebooks/: create_erdigram.ipynb  create_turtle.ipynb  data_analysis_maria.ipynb  data_analysis_samana.ipynb  data_analysis_vaishnavee.ipynb  data_analysis_xiaoxuan.ipynb  erdiagram.ipynb  get_table_name.ipynb  import_data.ipynb  import_ttls_in_neo4j.ipynb  test_db.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb
src/biokb_wcvp/: __init__.py  cli.py  constants.py  tools.py
src/biokb_wcvp/api/: main.py  query_tools.py  schemas.py  tags.py
src/biokb_wcvp/db/: manager.py  models.py  tree.py
src/biokb_wcvp/rdf/: namespaces.py  neo4j_importer.py  turtle.py
src/wcvp/: manager.py  tools.py
src/wcvp/api/: main.py  schemas.py  tags.py
src/wcvp/db/: manager.py  models.py
tests/: test_api.py  test_db.py  test_software.py
tests/data/test_data/: test_data.csv
