[project]
name = "biokb_wcvp"
version = "0.1.0"
description = "Manage and query World Checklist of Vascular Plants data"
authors = [
    {name = "Christian Ebeling", email = "Christian.Ebeling@scai.fraunhofer.de"},
]
dependencies = [
    "sqlalchemy>=2.0.39",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.7",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "podman-compose>=1.4.0",
    "openpyxl>=3.1.5",
    "neo4j>=6.0.3",
    "rdflib-neo4j>=1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "podman-compose>=1.4.0",
]
docs = [
    "eralchemy[graphviz]>=1.5.0",
    "graphviz>=0.21",
]
tests = [
    "pytest>=8.4.1",
]
