[project]
name = "biokb_wcvp"
version = "0.1.0"
description = "Manage and query World Checklist of Vascular Plants data"
authors = [
    {name = "Christian Ebeling", email = "Christian.Ebeling@scai.fraunhofer.de"},
]
dependencies = [
    "sqlalchemy>=2.0.39",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.7",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "podman-compose>=1.4.0",
    "openpyxl>=3.1.5",
    "neo4j>=6.0.3",
    "rdflib-neo4j>=1.1",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License"
]
keywords = ["ethnobotany", "knowledge graph", "knowledge base", "bioinformatics", "World Checklist of Vascular Plants"]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://biokb-wcvp.readthedocs.io"
Documentation = "https://biokb-wcvp.readthedocs.io"
Repository = "https://github.com/biokb/biokb_wcvp"
Issues = "https://github.com/biokb/biokb_wcvp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
readthedocs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings[python]>=1.0.0",
]
docs = [
    "eralchemy[graphviz]>=1.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
]
dev = [
    "tox>=4.15.0",
    "black>=24.4.2",
    "mypy>=1.19.1",
    "isort>=7.0.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "testcontainers[neo4j]>=4.13.3",
    "tox>=4.32.0",
]

[project.scripts]
biokb_wcvp = "biokb_wcvp.cli:main"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["biokb_wcvp"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # force type hints on function definitions
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "rdflib_neo4j.*",
    "rdflib_neo4j"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning"
]

[tool.coverage.run]
parallel = true
source = ["biokb_wcvp"]

[tool.coverage.paths]
source = [
    "src/biokb_wcvp",
    "*/site-packages/biokb_wcvp"
]